--- a/OUTPUT/stm32f103.build_log.htm
+++ b/OUTPUT/stm32f103.build_log.htm
@@ -27,20 +27,11 @@ Project File Date:  03/04/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Program Files\Keil5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling thermometer_app.c...
-..\USER\THERMOMETER\thermometer_app.c(260): warning:  #111-D: statement is unreachable
-  		vPortFree(T1);
-..\USER\THERMOMETER\thermometer_app.c(25): warning:  #177-D: variable "step_change"  was declared but never referenced
-  	u8 step_change=1;  //1页面出现变更,0无
-..\USER\THERMOMETER\thermometer_app.c(27): warning:  #177-D: variable "temp"  was declared but never referenced
-  	u8 temp;
-..\USER\THERMOMETER\thermometer_app.c(63): warning:  #177-D: variable "a"  was declared but never referenced
-  	u8 a = sizeof(float);
-..\USER\THERMOMETER\thermometer_app.c: 4 warnings, 0 errors
+compiling main.c...
 linking...
 Program Size: Code=16010 RO-data=6174 RW-data=120 ZI-data=1026004  
 FromELF: creating hex file...
-"..\OUTPUT\stm32f103.axf" - 0 Error(s), 4 Warning(s).
+"..\OUTPUT\stm32f103.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
